--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "h5web-es6-boilerplate",
-  "version": "1.0.0",OC
+  "version": "1.0.0",
   "description": "",
-  "main": "dist/index.html",
+  "main": "public/index.html",
+  "license": "MIT",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,6 +16,7 @@
     "babel": "^5.8.21",
     "babel-core": "^5.8.21",
     "babelify": "^6.1.3",
+    "browser-sync": "^2.8.2",
     "browserify": "^11.0.1",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.3.1",
