--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "public/index.html",
-  "author": "Peter Teich"
+  "author": "pteich",
   "license": "MIT",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -23,7 +23,16 @@
     "transpile",
     "gulp",
     "babel"
-  ],
+  ],  
+  "browserify": {
+  "transform": [ "browserify-shim" ]
+  },
+  "browser": {
+    "jquery": "./node_modules/jquery/dist/jquery.js"
+  },
+  "browserify-shim": {
+    "jquery": "jQuery"
+  },
   "private": false,
   "devDependencies": {
     "babel": "^5.8.21",
@@ -31,6 +40,7 @@
     "babelify": "^6.1.3",
     "browser-sync": "^2.8.2",
     "browserify": "^11.0.1",
+    "browserify-shim": "^3.8.10",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.3.1",
     "gulp-cache": "^0.2.10",
@@ -49,6 +59,7 @@
     "sass-mq": "^3.2.3",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
-    "yargs": "^3.17.1"
+    "yargs": "^3.17.1",
+    "jquery": "^2.1.4",
   }
 }
