--- a/package.json
+++ b/package.json
@@ -25,40 +25,40 @@
     "babel"
   ],
   "browserify": {
-  "transform": [ "browserify-shim" ]
+    "transform": [
+      "browserify-shim"
+    ]
   },
-  "browser": {
-  },
-  "browserify-shim": {
-  },
+  "browser": {},
+  "browserify-shim": {},
   "private": false,
   "devDependencies": {
     "babel": "^5.8.21",
     "babel-core": "^5.8.21",
     "babelify": "^6.1.3",
-    "browser-sync": "^2.8.2",
+    "browser-sync": "^2.18.8",
     "browserify": "^11.0.1",
-    "browserify-shim": "^3.8.10",
     "browserify-handlebars": "^1.0.0",
-    "gulp": "^3.9.0",
+    "browserify-shim": "^3.8.14",
+    "gulp": "^3.9.1",
     "gulp-autoprefixer": "^2.3.1",
     "gulp-cache": "^0.2.10",
     "gulp-changed": "^1.3.0",
-    "gulp-concat": "^2.6.0",
+    "gulp-concat": "^2.6.1",
     "gulp-if": "^1.2.5",
     "gulp-load-plugins": "^0.10.0",
-    "gulp-minify-css": "^1.2.0",
-    "gulp-minify-html": "^1.0.4",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-minify-html": "^1.0.6",
     "gulp-sass": "^2.0.4",
     "gulp-size": "^1.2.3",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.2.0",
-    "gulp-util": "^3.0.6",
-    "run-sequence": "^1.1.2",
-    "sass-mq": "^3.2.3",
+    "gulp-util": "^3.0.8",
+    "jquery": "^3.2.1",
+    "run-sequence": "^1.2.2",
+    "sass-mq": "^3.3.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
-    "yargs": "^3.17.1",
-    "jquery": "^2.1.4",
+    "yargs": "^3.17.1"
   }
 }
