--- a/package.json
+++ b/package.json
@@ -33,32 +33,33 @@
   "browserify-shim": {},
   "private": false,
   "devDependencies": {
-    "babel": "^5.8.21",
-    "babel-core": "^5.8.21",
-    "babelify": "^6.1.3",
+    "babel-core": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babelify": "^7.3.0",
     "browser-sync": "^2.18.8",
-    "browserify": "^11.0.1",
+    "browserify": "^14.3.0",
     "browserify-handlebars": "^1.0.0",
     "browserify-shim": "^3.8.14",
     "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^2.3.1",
-    "gulp-cache": "^0.2.10",
-    "gulp-changed": "^1.3.0",
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-cache": "^0.4.6",
+    "gulp-changed": "^2.0.0",
     "gulp-concat": "^2.6.1",
-    "gulp-if": "^1.2.5",
-    "gulp-load-plugins": "^0.10.0",
+    "gulp-if": "^2.0.2",
+    "gulp-load-plugins": "^1.5.0",
     "gulp-minify-css": "^1.2.4",
     "gulp-minify-html": "^1.0.6",
-    "gulp-sass": "^2.0.4",
-    "gulp-size": "^1.2.3",
-    "gulp-sourcemaps": "^1.5.2",
-    "gulp-uglify": "^1.2.0",
+    "gulp-sass": "^3.1.0",
+    "gulp-size": "^2.1.0",
+    "gulp-sourcemaps": "^2.6.0",
+    "gulp-uglify": "^2.1.2",
     "gulp-util": "^3.0.8",
+    "handlebars": "^4.0.6",
     "jquery": "^3.2.1",
     "run-sequence": "^1.2.2",
     "sass-mq": "^3.3.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
-    "yargs": "^3.17.1"
+    "yargs": "^7.1.0"
   }
 }
